@@ -53,7 +53,7 @@ None.
 
 =head1 VERSION
 
-version 0.06
+version 0.07
 
 =head1 METHODS
 
